# cocoverify2

./: .gitignore  AGENT.md  README.md  pyproject.toml
docs/: architecture.md  mvp_plan.md  phase7_phase8_closed_loop_plan_20260331.md  progress.md
src/cocoverify2/: __init__.py  cli.py
src/cocoverify2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli_smoke.py  test_contract_extractor.py  test_integration_minimal.py  test_llm_client.py  test_llm_validators.py  test_models.py  test_oracle_generator.py  test_orchestrator.py  test_repair.py  test_result_parser.py  test_rtl_parser.py  test_rtllm_batch.py  test_semantic_families.py  test_simulator_runner.py  test_subprocess_utils.py  test_tb_renderer.py  test_template_loader.py  test_test_plan_generator.py  test_todo_fill.py  test_triage.py
tmp/core_strength_slice_20260331/: summary.csv  summary.json  summary.md
tmp/core_strength_slice_20260331_v2/: summary.csv  summary.json  summary.md
tmp/hybrid_generalization_full_20260331/: summary.csv  summary.json  summary.md
tmp/hybrid_generalization_full_20260331_v2/: summary.csv  summary.json  summary.md
tmp/hybrid_generalization_regression_slice_20260331_v3/: summary.csv  summary.json  summary.md
tmp/hybrid_generalization_regression_slice_20260331_v4/: summary.csv  summary.json  summary.md
tmp/hybrid_generalization_slice_20260331/: summary.csv  summary.json  summary.md
tmp/rtllm_alu_hybrid_eval/: bad_verified_alu.v
tmp/rtllm_batch_adder_timeout60_check/: summary.csv  summary.json  summary.md
(+22998 files in other folders)
