[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocoverify2"
version = "0.1.0"
description = "Stage-based LLM-assisted cocotb verification framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.75,<2",
  "pydantic>=2.11,<3",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
cocoverify2 = "cocoverify2.cli:main"
cocoverify2-rtllm-batch = "cocoverify2.eval.rtllm_batch:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"cocoverify2.cocotbgen" = ["templates/*.tmpl"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
